<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name ="defaultInput">Your input will show here</string>
    <string name="defaultRes">The result will show here</string>
    <string name="ac">AC</string>
    <string name="mod">%</string>
    <string name="div">/</string>
    <string name="mul">*</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="pow">^</string>
    <string name="sqrt">√</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="tan">tan</string>
    <string name="e">e</string>
    <string name="point">.</string>
    <string name="ans">ans</string>
    <string name="pi">π</string>
    <string name="log">log</string>
    <string name="comma">,</string>
    <string name="equals">=</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="zero">0</string>
    <string name="delete">←</string>
    <string name="leftBrace">(</string>
    <string name="rightBrace">)</string>
    <string name="reset">Begin calculating……</string>

</resources>
