<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <TextView android:id="@+id/inputbox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="30sp"
        android:ellipsize="marquee"
        android:gravity="right"
        android:layout_marginRight="10dp"
        android:hint="@string/defaultInput" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <TextView android:id="@+id/resbox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:ellipsize="marquee"
            android:gravity="right"
            android:layout_marginRight="10dp"
            android:hint="@string/defaultRes"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <Button android:id="@+id/leftBrace"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/leftBrace"
            android:textSize="20sp"
            android:onClick="addNumberOrOpe"/>

        <Button android:id="@+id/rightBrace"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/rightBrace"
            android:textSize="20sp"
            android:onClick="addNumberOrOpe"/>

        <Button android:id="@+id/mod"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/mod"
            android:textSize="20sp"
            android:onClick="addNumberOrOpe"/>

        <Button android:id="@+id/div"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/div"
            android:textSize="20sp"
            android:onClick="addNumberOrOpe"/>

        <Button android:id="@+id/pow"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/pow"
            android:textSize="20sp"
            android:onClick="addNumberOrOpe"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <Button android:id="@+id/seven"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/seven"
            android:textSize="20sp"
            android:onClick="addNumberOrOpe"/>

        <Button android:id="@+id/eight"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/eight"
            android:textSize="20sp"
            android:onClick="addNumberOrOpe"/>

        <Button android:id="@+id/nine"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/nine"
            android:textSize="20sp"
            android:onClick="addNumberOrOpe"/>

        <Button android:id="@+id/mul"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mul"
            android:textSize="20sp"
            android:onClick="addNumberOrOpe"/>

        <Button android:id="@+id/sqrt"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/sqrt"
            android:textSize="20sp"
            android:onClick="addNumberOrOpe"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <Button android:id="@+id/four"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/four"
            android:textSize="20sp"
            android:onClick="addNumberOrOpe"/>

        <Button android:id="@+id/five"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/five"
            android:textSize="20sp"
            android:onClick="addNumberOrOpe"/>

        <Button android:id="@+id/six"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/six"
            android:textSize="20sp"
            android:onClick="addNumberOrOpe"/>

        <Button android:id="@+id/sub"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/sub"
            android:textSize="20sp"
            android:onClick="addNumberOrOpe"/>

        <Button android:id="@+id/log10"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/log10"
            android:textSize="20sp"
            android:onClick="addNumberOrOpe"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <Button android:id="@+id/one"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/one"
            android:textSize="20sp"
            android:onClick="addNumberOrOpe"/>

        <Button android:id="@+id/two"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/two"
            android:textSize="20sp"
            android:onClick="addNumberOrOpe"/>

        <Button android:id="@+id/three"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/three"
            android:textSize="20sp"
            android:onClick="addNumberOrOpe"/>

        <Button android:id="@+id/add"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:textSize="20sp"
            android:onClick="addNumberOrOpe"/>

        <Button android:id="@+id/log2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/log2"
            android:textSize="20sp"
            android:onClick="addNumberOrOpe"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <Button android:id="@+id/zero"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/zero"
            android:textSize="20sp"
            android:onClick="addNumberOrOpe"/>

        <Button android:id="@+id/delete"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/delete"
            android:textSize="20sp"
            android:onClick="addNumberOrOpe"/>

        <Button android:id="@+id/ac"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/ac"
            android:textSize="20sp"
            android:onClick="reset"/>

        <Button android:id="@+id/equals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equals"
            android:textSize="20sp"
            android:onClick="calculate"/>

        <Button android:id="@+id/ln"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/ln"
            android:textSize="20sp"
            android:onClick="addNumberOrOpe"/>

    </LinearLayout>

</LinearLayout>

